--- a/sass/Utils/_variables.scss
+++ b/sass/Utils/_variables.scss
@@ -3,10 +3,11 @@
 //------------------------
 
 $primary : #ABFF85;
-$secondary:#2A5A8E ;
+$secondary:#2A5A8E;
 $tertiary: #FF925C;
 $grey: #F2F2F2;
 $white: #FFF;
 $bluesky: #ade8f4;
 $wall: rgb(230, 230, 251);
+$wall2: #272932;
 
