--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,12 +14,13 @@ body Header {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  min-height: 260px;
-  max-height: 260px;
+  min-height: 220px;
+  max-height: 220px;
   padding: 0;
   margin: 0;
-  background-color: rgb(230, 230, 251);
-  background-image: url("https://www.transparenttextures.com/patterns/brick-wall-dark.png");
+  background-image: url(../../images/fond_header.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 body Header .headerImg {
   width: 100%;
@@ -32,7 +33,7 @@ body Header .headerImg {
 }
 body Header H1 {
   position: absolute;
-  top: 27px;
+  top: 8px;
   color: #ABFF85;
   text-shadow: 3px 3px 2px black;
   font-size: 90px;
@@ -43,7 +44,7 @@ body Header H1 .orange {
 }
 body Header h2 {
   position: absolute;
-  top: 90px;
+  top: 71px;
   color: #ABFF85;
   text-shadow: 3px 3px 2px black;
   font-size: 80px;
@@ -93,7 +94,7 @@ body Header .nav > #nav-check:checked ~ .nav-links {
 }
 body Header .navigation {
   padding-bottom: 30px;
-  top: 210px;
+  top: 170px;
   position: absolute;
 }
 body Header .navigation .navList {
@@ -123,7 +124,7 @@ body Header .navigation .effetNeon {
   }
 }
 body main {
-  background-image: url(../../images/a-bright-window-lite-room-shows-a-home-office.jpg);
+  background-image: url(../../images/chats-en-teletravail-vacances-palmier.webp);
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
@@ -238,26 +239,106 @@ body main .textWelcome {
   align-items: center;
   margin: 2em;
   background-color: #f2f2f2;
-  background-image: url("https://www.transparenttextures.com/patterns/brick-wall-dark.png");
 }
 body main .textWelcome .text1 {
   font-style: italic;
-  font-size: 25px;
+  font-size: 30px;
   font-weight: bold;
   margin: 1em;
-  width: 280px;
-  color: #293241;
+  width: 330px;
+  color: #14213d;
 }
-body main .EspaceParticuliers {
-  width: 90%;
+body main .carou {
+  height: 450px;
+}
+body main .carou .container {
+  position: relative;
+  width: 320px;
+  margin: 50px auto 0 auto;
+  perspective: 1000px;
+}
+body main .carou .container .carousel {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  animation: rotate360 60s infinite forwards linear;
+}
+body main .carou .container .carousel .carousel__face {
+  position: absolute;
+  width: 300px;
+  height: 187px;
+  top: 20px;
+  left: 10px;
+  right: 10px;
+  background-size: cover;
+  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.5);
+  display: flex;
+}
+body main .carou .container .carousel .carousel__face span {
+  margin: auto;
+  font-size: 2rem;
+}
+body main .carou .container .carousel .carousel__face:nth-child(1) {
+  background-image: url(../../images/formateur.jpg);
+  transform: rotateY(0deg) translateZ(430px);
+}
+body main .carou .container .carousel .carousel__face:nth-child(2) {
+  background-image: url("https://images.pexels.com/photos/1258865/pexels-photo-1258865.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  transform: rotateY(40deg) translateZ(430px);
+}
+body main .carou .container .carousel .carousel__face:nth-child(3) {
+  background-image: url("https://images.pexels.com/photos/808466/pexels-photo-808466.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  transform: rotateY(80deg) translateZ(430px);
+}
+body main .carou .container .carousel .carousel__face:nth-child(4) {
+  background-image: url("https://images.pexels.com/photos/1394841/pexels-photo-1394841.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  transform: rotateY(120deg) translateZ(430px);
+}
+body main .carou .container .carousel .carousel__face:nth-child(5) {
+  background-image: url("https://images.pexels.com/photos/969679/pexels-photo-969679.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  transform: rotateY(160deg) translateZ(430px);
+}
+body main .carou .container .carousel .carousel__face:nth-child(6) {
+  background-image: url("https://images.pexels.com/photos/1834400/pexels-photo-1834400.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  transform: rotateY(200deg) translateZ(430px);
+}
+body main .carou .container .carousel .carousel__face:nth-child(7) {
+  background-image: url("https://images.pexels.com/photos/1415268/pexels-photo-1415268.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  transform: rotateY(240deg) translateZ(430px);
+}
+body main .carou .container .carousel .carousel__face:nth-child(8) {
+  background-image: url("https://images.pexels.com/photos/135018/pexels-photo-135018.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  transform: rotateY(280deg) translateZ(430px);
+}
+body main .carou .container .carousel .carousel__face:nth-child(9) {
+  background-image: url("https://images.pexels.com/photos/1175135/pexels-photo-1175135.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  transform: rotateY(320deg) translateZ(430px);
+}
+@keyframes rotate360 {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(-360deg);
+  }
+}
+body main .blockDescription {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+body main .blockDescription .EspaceParticuliers {
+  width: 350px;
   border: 2px solid #F2F2F2;
   border-radius: 30px;
   margin: 0.7em;
   display: flex;
+  flex-direction: column;
 }
-body main .EspaceParticuliers .TitleEspaceParticuliers {
-  width: 30%;
-  background-color: #FFF;
+body main .blockDescription .EspaceParticuliers .TitleEspaceParticuliers {
+  width: 90%;
+  background: conic-gradient(#d7d7d7, #c3c3c3, #cccccc, #c6c6c6, #d7d7d7, #c3c3c3, #cccccc, #c6c6c6, #d7d7d7, #c3c3c3, #cccccc, #c6c6c6, #d7d7d7, #c3c3c3, #cccccc, #c6c6c6);
   border-radius: 30px;
   margin: 0.5em;
   display: flex;
@@ -265,30 +346,36 @@ body main .EspaceParticuliers .TitleEspaceParticuliers {
   justify-content: center;
   flex-wrap: wrap;
 }
-body main .EspaceParticuliers .TitleEspaceParticuliers .TitlePartculiers {
+body main .blockDescription .EspaceParticuliers .TitleEspaceParticuliers .TitlePartculiers {
   font-size: 33px;
   margin: 0.2em;
 }
-body main .EspaceParticuliers .TextEspaceParticuliers {
-  width: 70%;
-  background-color: #F2F2F2;
+body main .blockDescription .EspaceParticuliers .TextEspaceParticuliers {
+  width: 90%;
+  background-color: #d6c3b2;
+  background-image: url("https://www.transparenttextures.com/patterns/brushed-alum-dark.png");
   border-radius: 30px;
   margin: 0.5em;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
-body main .EspaceParticuliers .TextEspaceParticuliers .TextParticuliers {
+body main .blockDescription .EspaceParticuliers .TextEspaceParticuliers .TextParticuliers {
   font-size: 33px;
-  margin: 0.2em;
+  margin: 0.7em;
 }
-body main .EspaceAutoEntreprises {
-  width: 90%;
+body main .blockDescription .EspaceAutoEntreprises {
+  width: 350px;
   border: 2px solid #F2F2F2;
   border-radius: 30px;
   margin: 0.7em;
   display: flex;
+  flex-direction: column;
 }
-body main .EspaceAutoEntreprises .TitleEspaceAutoEntreprises {
-  width: 30%;
-  background-color: #FFF;
+body main .blockDescription .EspaceAutoEntreprises .TitleEspaceAutoEntreprises {
+  width: 90%;
+  background: conic-gradient(#d95641, #b14439, #b2453a, #d25645, #d95641, #b14439, #b2453a, #d25645, #d95641, #b14439, #b2453a, #d25645, #d95641, #b14439, #b2453a, #d25645);
   border-radius: 30px;
   margin: 0.5em;
   display: flex;
@@ -296,30 +383,36 @@ body main .EspaceAutoEntreprises .TitleEspaceAutoEntreprises {
   justify-content: center;
   flex-wrap: wrap;
 }
-body main .EspaceAutoEntreprises .TitleEspaceAutoEntreprises .TitleAutoEntreprises {
+body main .blockDescription .EspaceAutoEntreprises .TitleEspaceAutoEntreprises .TitleAutoEntreprises {
   font-size: 33px;
   margin: 0.2em;
 }
-body main .EspaceAutoEntreprises .TextEspaceAutoEntreprises {
-  width: 70%;
-  background-color: #F2F2F2;
+body main .blockDescription .EspaceAutoEntreprises .TextEspaceAutoEntreprises {
+  width: 90%;
+  background-color: #d6c3b2;
+  background-image: url("https://www.transparenttextures.com/patterns/brushed-alum-dark.png");
   border-radius: 30px;
   margin: 0.5em;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
-body main .EspaceAutoEntreprises .TextEspaceAutoEntreprises .TextAutoEntreprises {
+body main .blockDescription .EspaceAutoEntreprises .TextEspaceAutoEntreprises .TextAutoEntreprises {
   font-size: 33px;
-  margin: 0.2em;
+  margin: 0.7em;
 }
-body main .EspaceSiteWeb {
-  width: 90%;
+body main .blockDescription .EspaceSiteWeb {
+  width: 350px;
   border: 2px solid #F2F2F2;
   border-radius: 30px;
   margin: 0.7em;
   display: flex;
+  flex-direction: column;
 }
-body main .EspaceSiteWeb .TitleEspaceSiteWeb {
-  width: 30%;
-  background-color: #FFF;
+body main .blockDescription .EspaceSiteWeb .TitleEspaceSiteWeb {
+  width: 90%;
+  background: conic-gradient(#edc800, #e3b600, #f3cf00, #ffe800, #edc800, #e3b600, #f3cf00, #ffe800, #edc800, #e3b600, #f3cf00, #ffe800, #edc800, #e3b600, #f3cf00, #ffe800);
   border-radius: 30px;
   margin: 0.5em;
   display: flex;
@@ -327,30 +420,36 @@ body main .EspaceSiteWeb .TitleEspaceSiteWeb {
   justify-content: center;
   flex-wrap: wrap;
 }
-body main .EspaceSiteWeb .TitleEspaceSiteWeb .TitleSiteWeb {
+body main .blockDescription .EspaceSiteWeb .TitleEspaceSiteWeb .TitleSiteWeb {
   font-size: 33px;
   margin: 0.2em;
 }
-body main .EspaceSiteWeb .TextEspaceSiteWeb {
-  width: 70%;
-  background-color: #F2F2F2;
+body main .blockDescription .EspaceSiteWeb .TextEspaceSiteWeb {
+  width: 90%;
+  background-color: #d6c3b2;
+  background-image: url("https://www.transparenttextures.com/patterns/brushed-alum-dark.png");
   border-radius: 30px;
   margin: 0.5em;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
-body main .EspaceSiteWeb .TextEspaceSiteWeb .TextSiteWeb {
+body main .blockDescription .EspaceSiteWeb .TextEspaceSiteWeb .TextSiteWeb {
   font-size: 33px;
-  margin: 0.2em;
+  margin: 0.7em;
 }
-body main .EspaceFormations {
-  width: 90%;
+body main .blockDescription .EspaceFormations {
+  width: 350px;
   border: 2px solid #F2F2F2;
   border-radius: 30px;
   margin: 0.7em;
   display: flex;
+  flex-direction: column;
 }
-body main .EspaceFormations .TitleEspaceFormations {
-  width: 30%;
-  background-color: #FFF;
+body main .blockDescription .EspaceFormations .TitleEspaceFormations {
+  width: 90%;
+  background: conic-gradient(#e6e9bf, #d2b5aa, #cbaea3, #d4b5ab, #e6e9bf, #d2b5aa, #cbaea3, #d4b5ab, #e6e9bf, #d2b5aa, #cbaea3, #d4b5ab, #e6e9bf, #d2b5aa, #cbaea3, #d4b5ab);
   border-radius: 30px;
   margin: 0.5em;
   display: flex;
@@ -358,19 +457,24 @@ body main .EspaceFormations .TitleEspaceFormations {
   justify-content: center;
   flex-wrap: wrap;
 }
-body main .EspaceFormations .TitleEspaceFormations .TitleFormations {
+body main .blockDescription .EspaceFormations .TitleEspaceFormations .TitleFormations {
   font-size: 33px;
   margin: 0.2em;
 }
-body main .EspaceFormations .TextEspaceFormations {
-  width: 70%;
-  background-color: #F2F2F2;
+body main .blockDescription .EspaceFormations .TextEspaceFormations {
+  width: 90%;
+  background-color: #d6c3b2;
+  background-image: url("https://www.transparenttextures.com/patterns/brushed-alum-dark.png");
   border-radius: 30px;
   margin: 0.5em;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
-body main .EspaceFormations .TextEspaceFormations .TextFormations {
+body main .blockDescription .EspaceFormations .TextEspaceFormations .TextFormations {
   font-size: 33px;
-  margin: 0.2em;
+  margin: 0.7em;
 }
 body footer .infos {
   width: 100%;
@@ -464,6 +568,9 @@ body footer .infos .droits a, body footer .infos .contact a, body footer .infos 
     overflow-y: auto;
   }
   body main .search {
+    display: none;
+  }
+  body main .carou {
     display: none;
   }
   body main .EspaceParticuliers {
